// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostMessagePreview direct and group messages should render preview for D message 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview direct and group messages should render preview for G message 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview nested previews should render file preview 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview nested previews should render opengraph preview 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview should not render bot icon 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview should render bot icon 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="https://fakeicon.com/image.jpg"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview should render correctly 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview should render without preview 1`] = `<div />`;

exports[`PostMessagePreview show render without preview when preview posts becomes undefined after being defined 1`] = `
<div>
  <div
    class="attachment attachment--permalink"
    role="button"
  >
    <div
      class="attachment__content attachment__content--permalink"
    >
      <div
        class="clearfix attachment__container attachment__container--permalink"
      >
        <div
          class="attachment__body__wrap attachment__body__wrap--permalink"
        >
          <div
            class="post-preview"
          >
            <div
              class="post-preview__header"
            >
              <div
                class="col col__name"
              >
                <div
                  class="post__img"
                >
                  <span
                    class="profile-icon"
                  >
                    <img
                      alt="username1 profile image"
                      class="Avatar Avatar-sm avatar-post-preview"
                      loading="lazy"
                      src="/api/v4/users/user_1/image?_=0"
                    />
                  </span>
                </div>
              </div>
              <div
                class="col col__name permalink--username"
              >
                <div
                  class="user-popover"
                >
                  username1
                </div>
              </div>
              <div
                class="col d-flex align-items-center"
              >
                <time
                  class="post-preview__time"
                  datetime="2020-01-15T12:00:00.000"
                >
                  January 15, 2020
                </time>
              </div>
            </div>
            <div
              class="post-message post-message--collapsed"
            >
              <div
                class="post-message__text-container"
                style="max-height: 105px;"
              >
                <div
                  class="post-message__text"
                  dir="auto"
                  id="postMessageText_post_id"
                >
                  <p>
                    post message
                  </p>
                </div>
              </div>
            </div>
            <div
              class="post__preview-footer"
            >
              <p>
                Only visible to users in ~channel name
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMessagePreview show render without preview when preview posts becomes undefined after being defined 2`] = `<div />`;
